--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="Printer_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\pgso_Billing\Image Asset\Printer_Icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Cancelled_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\pgso_Billing\Image Asset\Cancelled_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Approved_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\pgso_Billing\Image Asset\Approved_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
