--- a/pgso_Billing/Forms/frm_Add_Equipment_Billing.resx
+++ b/pgso_Billing/Forms/frm_Add_Equipment_Billing.resx
@@ -123,6 +123,9 @@
   <metadata name="_BRIS_EXPERIMENT_3_0DataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>639, 17</value>
   </metadata>
+  <metadata name="_BRIS_EXPERIMENT_3_0DataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>639, 17</value>
+  </metadata>
   <metadata name="_BRIS_EXPERIMENT_3_0DataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -139,7 +142,7 @@
   <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAA1EAAACXCAYAAAD03NGeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAtztJREFUeF7sXQdYVMcaXYpK79VeYu/dkMQ0E03viUlMNA1NotFoii32XrE37BUb
+        vQAADr0BR/uQrQAAtztJREFUeF7sXQdYVMcaXYpK79VeYu/dkMQ0E03viUlMNA1NotFoii32XrE37BUb
         2FCxAAKCSpdeLViw0juc953BRdhdEIx5ajL3+86TvTt3Zu7cm/fN2fP/51esPhcKCQkJCQkJCQkJCQkJ
         iepBoXpCQkJCQkJCQkJCQkJConJIEiUhISEhISEhISEhIVEDSBIlISEhISEhISEhISFRA0gSJSEhISEh
         ISEhISEhUQNIEiUhISEhISEhISEhIVEDSBIlISEhISEhISEhISFRA0gSJSEhISEhISEhISEhUQNIEiUh
