IF ALL THINGS WENT WELL PUBLISH

--- a/pgso_Billing/Forms/frm_Edit_Equipment_Billing.resx
+++ b/pgso_Billing/Forms/frm_Edit_Equipment_Billing.resx
@@ -135,10 +135,10 @@
   <metadata name="_BRIS_EXPERIMENT_3_0DataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>628, -43</value>
   </metadata>
-  <metadata name="_BRIS_EXPERIMENT_3_0DataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>628, -43</value>
+  <metadata name="billingDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>226, -6</value>
   </metadata>
-  <metadata name="_BRIS_EXPERIMENT_3_0DataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>846, -43</value>
+  <metadata name="billingDataTableBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>353, -6</value>
   </metadata>
 </root>
