--- a/frm_login.resx
+++ b/frm_login.resx
@@ -28132,4 +28132,80 @@
         AAAAAAAAAAAAAAAAAAAAAA7Y/wNMqrj07aNLEQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAC4gH//kzw6/5VBP/+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VB
+        P/+TPDr/uIB//5M8Ov+VPz3/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5U/Pf+TPDr/lUE//5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VBP/+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lkJA/5ZCQP+VQD7/lUA+/5VAPv+WQkD/lkJA/5ZBP/+WQkD/lkJA/5ZC
+        QP+WQkD/lkJA/5ZCQP+VQD7/lUA+/5ZCQP+WQkD/lUE//5ZCQP+WQkD/lkJA/5ZCQP+WQkD/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5U/Pf+QNjT/kDY0/5Q+PP+VQD7/lUA+/5A4Nv+ONDL/kTg2/5E3
+        Nf+QNjT/kDY0/5A2NP+QNjT/kDg2/5ZBP/+UPjz/jjUz/5A4Nv+SOzn/jzQy/481M/+PNTP/jzUz/5A3
+        Nf+VQD7/lUE//5VAPv+VQD7/lUA+/5VAPv+UPz3/l0RC/65sa/+vbm3/mUdF/5Q/Pf+UPjz/q2hn/7V5
+        eP+qZmT/rGpo/7Bvbv+vbm3/rm1s/69ubf+qZWT/kjs5/5pJR/+zdnX/qmZl/6NZWP+0d3f/snNy/7J0
+        c/+zdXT/rGln/5Q+PP+UPTv/lUE//5VAPv+VQD7/lUE//5M9O/+bTEr/9/Dw//////+qZmX/jzUz/5xN
+        S//17u3//////82lpP/y6Oj////////+/v///////v7+///////dwsH/rm1r///////t39//xpmY////
+        ///+/f3///////7+/v//////4MfG/5VAPv+VQD7/lUA+/5VAPv+VQT//lD89/5dEQv/w5eT//////7Fy
+        cP+JKyn/s3Z1///////8+fn/qmdl//Dl5f///////v7+/////////////v7+///////RrKv/+vX1//Pq
+        6f/DkpH///////79/f////////////79/f//////tnx7/481M/+WQ0H/lUA+/5VAPv+VQD7/lD89/+vb
+        2///////t317/4YlI//Qq6r//////+jW1v+VQD7/8OPj///////Qq6r/t359/7iAf//p19b//////+PN
+        zf/27+///Pn5/7N3df/PqKf/y6Kh/8qfnv/InJv/0ayr///////Qqqn/jTIw/5dDQf+VQD7/lUA+/5ZB
+        P/+SOjj/5tPS///////x5ub/6dfX//jy8v//////6NbW/5I6OP/q2dn//////8OTkv+fUlD/olhW/9/G
+        xf//////483N//Hm5f//////pV1b/4UjIf+cTEv/olhW/55QT/+raGb//////9m7uv+OMzH/lkNB/5VA
+        Pv+VQD7/lkJA/5A2NP/gyMf///////78/P////////////78/P//////tnx7/9/FxP///////v39////
+        /////////vz8///////PqKf/6trZ//////+oYmD/xJWU///////+/v7///////38/P//////0q6t/44z
+        Mf+XQ0H/lUA+/5VAPv+WQ0H/jjQy/9q8u///////+/j4//r29v/69/f//Pr6///////WtLT/2bu6////
+        ///+/Pz////////////+/v7//////61rav/m0tL//////7mCgf/w5OT///////7+/v///////v7+////
+        //+1eXj/jzUz/5ZCQP+VQD7/lUA+/5dDQf+OMzD/0a2s///////YuLj/l0RC/5lIRv+xcnH//////+LK
+        yv/VtLP//////+TOzv/Bjo3/wY+O/97Dwv//////yp+e/97Ew///////yp+e//n09P/48fH/0a2s/9Gs
+        q//TsK//tHl3/480Mv+WQT//lUA+/5VAPv+VQD7/l0NB/40yMP/KoJ///////97Dwv+aSUf/nE1L/7Bx
+        b///////48zL/8+op///////1rW0/5dDQf+XREL/xJWT///////XtrX/2bq6///////NpaT/+fTz/+/j
+        4/+lXFr/pVxb/6RbWv+nYV//pV1b/5Q+PP+VQD7/lUA+/5VAPv+XQ0H/jTIw/8SVlP//////+/j4//v4
+        +P/7+Pj/+/n5///////Xtrb/xZeW///////8+vr//v39//79/f/9+/v//////9Owr//Qqqn//////8ea
+        mf/o1dT///////7+/v///////v39///////iy8r/kDc1/5ZCQP+VQD7/lUA+/5dDQf+OMzH/voqI////
+        ///9/Pz////////////+/v7//////61sav+/i4r///////38/P////////////79/f//////sXNx/8mf
+        nv//////x5ua/7+Miv///////v39///////+/f3//////+nY1/+TPDr/lUE//5VAPv+VQD7/lkJA/5E4
+        Nv+samj/38bF/9q8u//avb3/2r29/9u/v/+3fHv/jC8t/7FycP/ew8L/2Lm4/9m7uv/Zu7r/2r28/7uF
+        hP+NMS//t358/+PNzP+9iIf/jjQy/72Ih//Yurn/2bu6/9i6uf/cwL//zqem/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUE//5M8Ov+PMzH/jzQy/480Mv+PNDL/jjMx/482NP+WQkD/kjs5/44zMf+ONDL/jjQy/440
+        Mv+OMzH/jzUz/5ZCQP+ROjj/jTIw/5E5N/+WQT//jjQy/44zMf+ONDL/jjQy/440Mv+PNjT/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUE//5ZDQf+WQ0H/lkNB/5ZDQf+WQ0H/lkJA/5VAPv+VQT//lkNB/5ZD
+        Qf+WQ0H/lkNB/5ZDQf+XQ0H/lUA+/5ZCQP+WQ0H/lkJA/5VAPv+XQ0H/l0NB/5ZDQf+WQ0H/lkNB/5ZC
+        QP+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUE//5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VB
+        P/+TPDr/lT89/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VPz3/kzw6/7iAf/+TPDr/lUE//5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VAPv+VQD7/lUA+/5VA
+        Pv+VQD7/lUE//5M8Ov+4gH//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
